[package]
name = "projecteuler100"
version = "0.1.0"
authors = ["Dale V. Ross <dalevross@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10" }
tokio = { version = "0.2", features = ["full"] }
select = "0.4.3"
clap = "2.33.0"